# modeling-with-tla

./: .gitignore  .gitmodules  README.md  modeling-with-tla-for-engineers.md  modeling-with-tla.md
.github/workflows/: build-pdf.yml
img/: alarm_wallclock_event_flow.excalidraw  atomic_component.excalidraw  closed_system.excalidraw  component.excalidraw  device1_component.excalidraw  different_invariant_kinds.excalidraw  event_steps.excalidraw  mapping.excalidraw  model_checking.excalidraw  parallel_component.excalidraw  server1_component.excalidraw  stuttering_steps.excalidraw  theme_closed_system.excalidraw  theme_components.excalidraw  tla_model.excalidraw
src/: LICENSE
src/components/: C1.tla  C2.tla  C3.tla  C3Abstract.tla  C4.tla  C5.tla
src/components/C1.toolbox/: C1___Model_1.launch
src/components/C2.toolbox/: C2___Model_1.launch
src/components/C3.toolbox/: C3___Model_1.launch
src/components/C3Abstract.toolbox/: C3Abstract___Model_1.launch
src/components/C4.toolbox/: C4___Model_1.launch
src/components/C5.toolbox/: C5___Model_1.launch
src/invariants/: Invariants.tla
src/theme/: Theme1.tla  Theme2.tla  Theme3.tla  ThemeCheckImpl.tla  ThemeCommon1.tla  ThemeCommon2.tla  ThemeDevice1.tla  ThemeDevice2.tla  ThemeServer1.tla  ThemeServer2.tla
src/theme/Theme1.toolbox/: Theme1___Model_1.launch
src/theme/Theme2.toolbox/: Theme2___Model_1.launch
src/theme/implementation/: CMakeLists.txt  README.md  client.cpp  common.hpp  initial_pack.txt  merge_logs.py  new_packs.txt  server.cpp
src/wallclock/: WallClock.tla  WallClockAlarm.tla
(+8 files in other folders)
