cmake_minimum_required(VERSION 3.5)
project(theme_client_server)
set(CMAKE_CXX_STANDARD 20)
add_executable(client client.cpp common.hpp)
add_executable(server server.cpp common.hpp)
add_subdirectory(zmqpp)
set(zmqpp_include_dir "${CMAKE_CURRENT_SOURCE_DIR}/zmqpp/src")
target_include_directories(client PRIVATE "${zmqpp_include_dir}")
target_include_directories(server PRIVATE "${zmqpp_include_dir}")
target_link_libraries(client zmqpp)
target_link_libraries(server zmqpp)
